--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb"> 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Forside - dataspæll</title> 
+  <!---->
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html" LOGO></a>
+      <nav>
+        <ul>
+          <li><a href="index.html">hjem</a></li>
+          <li><a href="products.html">produkter</a></li>
+        </ul>
+      </nav>
+    </header>
+
+  </body>
 </html>
