--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" LOGO></a>
+      <a href="index.html">LOGO></a>
       <nav>
         <ul>
           <li><a href="index.html">hjem</a></li>
