--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
   </head>
   <body>
     <header>
-      <a href="index.html">LOGO></a>
+      <h3><a href="index.html">LOGO></a></h3>
       <nav>
         <ul>
           <li><a href="index.html">hjem</a></li>
           <li><a href="products.html">produkter</a></li>
+          <li><a href="link">link</a></li>
         </ul>
       </nav>
     </header>
 
+<main>
+  <header>
+    <h1> Denne siden handler om gaming</h1>
+    <section>
+      <h2>Crazy gaming deals</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
+    </section>
+  </main>
+</header>
   </body>
 </html>
