--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h3><a href="index.html">LOGO></a></h3>
+      <h3><a href="index.html">LOGO</a></h3>
       <nav>
         <ul>
           <li><a href="index.html">hjem</a></li>
