--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <main>
   <header>
-    <h1> Denne siden handler om gaming</h1>
+    <h1> Denne siden handler om avføring</h1>
     <section>
-      <h2>Crazy gaming deals</h2>
+      <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann/h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
     </section>
