--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <h1> Denne siden handler om avføring</h1>
     <section>
-      <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann/h2>
+      <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
     </section>
