--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1> Denne siden handler om avføring</h1>
     <section>
       <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>Tenk på denne hunden neste gang du skal bæsje.</p>
       <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
     </section>
   </main>
