--- a/index.html
+++ b/index.html
@@ -21,12 +21,23 @@
 <main>
   <header>
     <h1> Denne siden handler om avføring</h1>
+    </header>
+
     <section>
       <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann</h2>
-      <p>Tenk på denne hunden neste gang du skal bæsje.</p>
+        <p>Tenk på denne hunden neste gang du skal bæsje.</p>
       <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
+    </article>  
     </section>
   </main>
-</header>
+
+  <aside>
+    <h2>Relaterte linker</h2>
+    <ul>
+      <li><a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Avføring - Wikipedia</a></li>
+      <li><a href="https://www.fhi.no/nettpub/hin/grupper/helsepersonell/avforingsproblemer-hos-eldre/">Avføringsproblemer hos eldre - FHI</a></li>
+      <li><a href="https://www.apotek1.no/medisin-og-rad/mage-og-tarm/forstoppelse">Forstoppelse - Apotek 1</a></li>
+    </ul>
+  </aside>
   </body>
 </html>
