--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </header>
 
     <section>
-      <h2>Hvis du er forstoppet burde du ta movicol og drikke mer vann</h2>
+      <header>
+        <h2>Hva er avføring?</h2>
+      </header>
+      <article>
+        <p>Avføring er det kroppen kvitter seg med når den har tatt opp næring fra maten vi spiser. Avføringen består av vann, ufordøyde matrester, døde celler fra tarmveggen og bakterier. Mengden og konsistensen av avføringen kan variere avhengig av kosthold, væskeinntak og tarmfunksjon.</p>
+        <p>Avføringen kan ha forskjellige farger. </p>
+    
         <p>Tenk på denne hunden neste gang du skal bæsje.</p>
       <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
     </article>  
