--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
       <li><a href="https://www.apotek1.no/medisin-og-rad/mage-og-tarm/forstoppelse">Forstoppelse - Apotek 1</a></li>
     </ul>
   </aside>
+  <footer> kontaktinformasjon </footer>
   </body>
 </html>
