--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
   <header>
     <h1> Denne siden handler om avføring</h1>
     </header>
-
-    <section>
       <header>
         <h2>Hva er avføring?</h2>
       </header>
       <article>
+        <h2> Artikkel</h2>
+        <section> Forfatter av artikklene: Anna Forrister</section>
+        <section> Dato: 06.06.2024</section>
+        <section> Kategori: helse</section>
         <p>Avføring er det kroppen kvitter seg med når den har tatt opp næring fra maten vi spiser. Avføringen består av vann, ufordøyde matrester, døde celler fra tarmveggen og bakterier. Mengden og konsistensen av avføringen kan variere avhengig av kosthold, væskeinntak og tarmfunksjon.</p>
         <p>Avføringen kan ha forskjellige farger. </p>
     
@@ -37,6 +39,40 @@
     </section>
   </main>
 
+<section> 
+  <h2>Relaterte artikler</h2>
+
+  <article>
+    <header>
+      <h2>Artikkel</h2>
+    </header>
+    <p> 
+      Artikkel tekst
+    </p>
+    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
+  </article>
+   
+  <article>
+    <header>
+      <h2>Artikkel</h2>
+    </header>
+    <p> 
+      Artikkel tekst
+    </p>
+    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
+  </article>
+
+    <article>
+    <header>
+      <h2>Artikkel</h2>
+    </header>
+    <p> 
+      Artikkel tekst
+    </p>
+    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
+  </article>
+  
+</section>
   <aside>
     <h2>Relaterte linker</h2>
     <ul>
