--- a/Fysio.html
+++ b/Fysio.html
@@ -21,9 +21,92 @@
 
 <main>
   <header>
-    <h1> Velkommen til din digitale fysioterapeut. Her finner du digitale program og tips du kan bruke for å gjøre din smertetilstand eller fysiske funkjon bedre</h1>
+  <h1>Din digitale fysioterapeut – trening og veiledning der du er</h1>
     </header>
 
+        <!-- Fordeler med digitale programmer -->
+    <section>
+      <header>
+        <h2>Fordeler med digitale programmer</h2>
+      </header>
+      <ul>
+        <li>Tilgjengelig når det passer deg</li>
+        <li>Personlig tilpassede øvelser</li>
+        <li>Rimeligere enn tradisjonell behandling</li>
+        <li>Enkel tilgang på mobil, nettbrett og PC</li>
+      </ul>
+    </section>
+
+    <!-- Slik fungerer det -->
+    <section>
+      <header>
+        <h2>Slik fungerer det</h2>
+      </header>
+      <ol>
+        <li>Velg et program som passer for deg</li>
+        <li>Registrer deg enkelt på nett</li>
+        <li>Følg treningsprogrammet hjemme</li>
+        <li>Få støtte og oppfølging underveis</li>
+      </ol>
+    </section>
+
+    <!-- Populære programmer -->
+    <section>
+      <header>
+        <h2>Populære programmer</h2>
+      </header>
+      <div>
+        <article>
+          <h3>Ryggprogram</h3>
+          <p>Effektive øvelser for deg med ryggplager.</p>
+          <a href="products.html">Få programmet</a>
+        </article>
+        <article>
+          <h3>Skulder & nakke</h3>
+          <p>Styrk og løs opp i stive skuldre og nakke.</p>
+          <a href="products.html">Les mer</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- Kundeuttalelser -->
+    <section>
+      <header>
+        <h2>Kundeuttalelser</h2>
+      </header>
+      <blockquote>
+        "Enkel og effektiv måte å få hjelp på hjemmefra!"<br>
+        <cite>- Maria, 42 år</cite>
+      </blockquote>
+      <blockquote>
+        "Programmet hjalp meg tilbake til hverdagen etter skade."<br>
+        <cite>- Erik, 35 år</cite>
+      </blockquote>
+    </section>
+
+    <!-- FAQ -->
+    <section>
+      <header>
+        <h2>Ofte stilte spørsmål</h2>
+      </header>
+      <details>
+        <summary>Hvordan får jeg tilgang til programmene?</summary>
+        <p>Du får tilgang umiddelbart etter kjøp via din brukerprofil.</p>
+      </details>
+      <details>
+        <summary>Kan jeg få veiledning underveis?</summary>
+        <p>Ja, du kan kontakte våre fysioterapeuter for råd og oppfølging.</p>
+      </details>
+    </section>
+
+    <!-- Kontakt -->
+    <section>
+      <header>
+        <h2>Kontakt oss</h2>
+      </header>
+      <p>Har du spørsmål? <a href="mailto:kontakt@digitalfysio.no">Send oss en e-post</a> eller bruk vårt <a href="#">kontaktskjema</a>.</p>
+    </section>
+<!-- ...existing code... -->
     <section>
       <header>
         <h2> Hvorfor kjøpe program digitalt?</h2>
@@ -31,62 +114,18 @@
       <p> Tekst som motiverer til valg av tjenesten</p>
       <img src="https://picsum.photos/id/1011/200/300"alt="en sort hund">
       </section>
-      <article>
-        <h2> Artikkel</h2>
-        <section> Forfatter av artikklene: Anna Forrister</section>
-        <section> Dato: 06.06.2024</section>
-        <section> Kategori: helse</section>
-        <p>Avføring er det kroppen kvitter seg med når den har tatt opp næring fra maten vi spiser. Avføringen består av vann, ufordøyde matrester, døde celler fra tarmveggen og bakterier. Mengden og konsistensen av avføringen kan variere avhengig av kosthold, væskeinntak og tarmfunksjon.</p>
-        <p>Avføringen kan ha forskjellige farger. </p>
     
-        <p>Tenk på denne hunden neste gang du skal bæsje.</p>
-      <img src="https://picsum.photos/id/237/200/300"alt="en sort hund">
-    </article>  
-    </section>
-  </main>
-
-<section> 
-  <h2>Relaterte artikler</h2>
-
-  <article>
-    <header>
-      <h2>Artikkel</h2>
-    </header>
-    <p> 
-      Artikkel tekst
+  <footer>
+    <p>&copy; 2025 Digital Fysio</p>
+    <p>
+      Kontakt: <a href="mailto:kontakt@digitalfysio.no">kontakt@digitalfysio.no</a> |
+      <a href="#">Personvern</a> |
+      <a href="#">Vilkår</a>
     </p>
-    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
-  </article>
-   
-  <article>
-    <header>
-      <h2>Artikkel</h2>
-    </header>
-    <p> 
-      Artikkel tekst
+    <p>Følg oss: 
+      <a href="#" aria-label="Facebook">Facebook</a> | 
+      <a href="#" aria-label="Instagram">Instagram</a>
     </p>
-    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
-  </article>
-
-    <article>
-    <header>
-      <h2>Artikkel</h2>
-    </header>
-    <p> 
-      Artikkel tekst
-    </p>
-    <a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Les mer om avføring her</a>
-  </article>
-  
-</section>
-  <aside>
-    <h2>Relaterte linker</h2>
-    <ul>
-      <li><a href="https://no.wikipedia.org/wiki/Avf%C3%B8ring">Avføring - Wikipedia</a></li>
-      <li><a href="https://www.fhi.no/nettpub/hin/grupper/helsepersonell/avforingsproblemer-hos-eldre/">Avføringsproblemer hos eldre - FHI</a></li>
-      <li><a href="https://www.apotek1.no/medisin-og-rad/mage-og-tarm/forstoppelse">Forstoppelse - Apotek 1</a></li>
-    </ul>
-  </aside>
-  <footer> kontaktinformasjon </footer>
+  </footer>
   </body>
 </html>
