--- a/Fysio.html
+++ b/Fysio.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type=text/css href="css/stylesheet.css" />
     <title>Forside - Digital fysio</title> 
   </head>
 
   <body>
     <header>
-      <h3><a href="Fysio.html">Logo</a></h3>
+      <h3><a href="Fysio.html" id="mainlogo">Logo</a></h3>
       <nav>
         <ul>
           <li><a href="index.html">hjem</a></li>
