--- a/Fysio.html
+++ b/Fysio.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h3><a href="Fysio.html" id="mainlogo">Logo</a></h3>
+      <h3><a href="Fysio.html">Logo</a></h3>
       <nav>
         <ul>
           <li><a href="index.html">hjem</a></li>
