--- a/Fysio.html
+++ b/Fysio.html
@@ -116,6 +116,33 @@
       <img src="https://picsum.photos/id/1011/200/300"alt="en sort hund">
       </section>
     
+ <footer>
+    <h2>Kontakt</h2>
+    <p><strong>Navn:</strong> Anna Førrisdahl</p>
+    <p><strong>E-post:</strong> <a href="mailto:alforris@hiof.no">alforris@hiof.no</a></p>
+    <p><strong>Emne:</strong> Webutvikling</p>
+
+    <form action="#" method="post">
+      <!-- Navn -->
+      <label for="name">Navn:</label><br>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <!-- Emne -->
+      <label for="subject">Emne:</label><br>
+      <input type="text" id="subject" name="subject" required><br><br>
+
+      <!-- E-post -->
+      <label for="email">E-post:</label><br>
+      <input type="email" id="email" name="email" required><br><br>
+
+      <!-- Melding -->
+      <label for="message">Melding:</label><br>
+      <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+
+      <!-- Send knapp -->
+      <button type="submit">Send</button>
+    </form>
+  </footer>
   <footer>
     <p>&copy; 2025 Digital Fysio</p>
     <p>
