rettet opp feil

--- a/tabelloving.html
+++ b/tabelloving.html
@@ -80,15 +80,15 @@
     <table>
         <thead>
             <tr>
-                <th colespan 6> Gjennomsnitt kvadrart prid på bbrukte og nye eneboliger</th>
+                <th colespan="6"> Gjennomsnitt kvadrart prid på bbrukte og nye eneboliger</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan 2></th>
-                <th colespan 2>kvadrarpris (kr)</th>
-                <th colespan 2>Endring fra året før</th>
-                <th rowspan 2></th>
+                <th rowspan="2"></th>
+                <th colespan="2">kvadrarpris (kr)</th>
+                <th colespan="2">Endring fra året før</th>
+                <th rowspan="2"></th>
             </tr>
             <tr>
                 <td></td>
