--- a/tabelloving.html
+++ b/tabelloving.html
@@ -78,16 +78,15 @@
     <br>
 
     <table>
-        <thead>
+         <tbody>
             <tr>
-                <th colespan="6"> Gjennomsnitt kvadrart prid på bbrukte og nye eneboliger</th>
+                <th colspan="6"> Gjennomsnitt kvadrart prid på bbrukte og nye eneboliger</th>
             </tr>
-        </thead>
-        <tbody>
+       
             <tr>
                 <th rowspan="2"></th>
-                <th colespan="2">kvadrarpris (kr)</th>
-                <th colespan="2">Endring fra året før</th>
+                <th colspan="2">kvadrarpris (kr)</th>
+                <th colspan="2">Endring fra året før</th>
                 <th rowspan="2"></th>
             </tr>
             <tr>
