--- a/tabelloving.html
+++ b/tabelloving.html
@@ -87,14 +87,13 @@
                 <th rowspan="2"></th>
                 <th colspan="2">kvadrarpris (kr)</th>
                 <th colspan="2">Endring fra året før</th>
-                <th></th>
+                <th rowspan="2"> bruktpris i prosent</th>
             </tr>
             <tr>
                 <th>nye eneboliger</th>
                 <th>brukte eneboliger</th>
                 <th>nye eneboliger</th>
                 <th>brukte eneboliger</th>
-                <th>Bruktpris i prosent</th>
             </tr>
             <tr>
                 <td>2020</td>
