--- a/LABØVELSE/nettsidemal.html
+++ b/LABØVELSE/nettsidemal.html
@@ -21,19 +21,8 @@
 
 <main>
   <header>
-    <h1> Lab øvelse 1</h1>
+    <h1> Dette er en mal</h1>
     </header>
-    <section>
-      <article>
-        <h2> Kontakt oss</h2>
-        <p>Her kan du kontakte oss</p>
-      </article>
-    <article>
-      <h2>Studieplan</h2>
-        <p>Her er studieplanen for webutvikling</p>
-        <a href="https://tp.educloud.no/hiof/timeplan/timeplan.php?id%5B%5D=ITF10511%2C1&type=course&sem=25h&campus=&hide_old=1">Link til studieplan</a>
-    </article>  
-    </section>
   </main>
 
 
@@ -62,9 +51,8 @@
 
 <footer>
     <h2>Kontakt</h2>
-    <p>Navn:Anna Førrisdahl</p>
+    <p>Navn: Anna Førrisdahl</p>
     <p>E-post:<a href="mailto:alforris@hiof.no">alforris@hiof.no</a></p>
-    <p>Emne:Webutvikling</p>
 
     <form action="#" method="post">
       <label>Navn:<br>
