--- a/LABØVELSE/index.html
+++ b/LABØVELSE/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hovedside - Digital fysioterapeut</title> 
+    <title>Hovedside - Labøvelse</title> 
+    <link rel="stylesheet" type="text/css" href="css/style.css/>
   <!---->
   </head>
   <body>
@@ -21,8 +22,19 @@
 
 <main>
   <header>
-    <h1> Dette er en mal</h1>
+    <h1> Lab øvelse 1</h1>
     </header>
+    <section>
+      <article>
+        <h2> Kontakt oss</h2>
+        <p>Her kan du kontakte oss</p>
+      </article>
+    <article>
+      <h2>Studieplan</h2>
+        <p>Her er studieplanen for webutvikling</p>
+        <a href="https://tp.educloud.no/hiof/timeplan/timeplan.php?id%5B%5D=ITF10511%2C1&type=course&sem=25h&campus=&hide_old=1">Link til studieplan</a>
+    </article>  
+    </section>
   </main>
 
 
