--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <div class="layout">
     <header class="site-header">
       <h3 class="logo"><a href="index.html">LOGO</a></h3>
       <nav class="main">
@@ -33,6 +34,11 @@
         <p>Her er studieplanen for webutvikling</p>
         <a href="https://tp.educloud.no/hiof/timeplan/timeplan.php?id%5B%5D=ITF10511%2C1&type=course&sem=25h&campus=&hide_old=1">Link til studieplan</a>
     </article>  
+  <article class="card">
+        <h2> Oversikt over labøvelser</h2>
+        <p>Tabell med oversikt over de ulike lab øvelsene vi har første semester</p>
+        <a href="ovelse.html">Tabell-oversikt</a>
+      </article>
     </section>
   </main>
 
