--- a/Dataspill.html
+++ b/Dataspill.html
@@ -7,7 +7,6 @@
   <head>
     <!-- <meta charset> setter tegnsett. UTF-8 støtter norske tegn (æ, ø, å) og de fleste språk. -->
     <meta charset="UTF-8" />
-
     <!-- Gjør layout responsiv på mobile enheter:
          name="viewport" målretter visningsporten.
          content="width=device-width" => bruk enhetens faktiske bredde.
@@ -21,7 +20,7 @@
 
   <!-- <body> inneholder alt synlig innhold og interaktive elementer på siden. -->
   <body>
-    <div id="page-container">   
+    <div id="page-container">
     <!-- Eksempel på utkommentert test-overskrift.
          Kommentarer, renderes ikke i nettleseren. -->
     <!-- <h1>Første fil</h1> -->
@@ -79,13 +78,13 @@
          Hjelper assistive tech å hoppe rett til “content”. Bare én <main> per side. -->
     <main>
       <!-- Seksjon for populære spillkort. -->
-      <section>
+      <section class="flex-container flex-grow">
         <!-- Seksjonsoverskrift for innholdsblokken. -->
         <h2>Populære Spæll</h2>
 
         <!-- <article> brukes for selvstendige innholdsbiter som kan stå alene (kort/produkt).
              Inneholder bilde, tittel, beskrivelse, pris og handling. -->
-        <article>
+        <article class="flex-container">
           <!-- Produktbilde.
                alt-tekst beskriver produktet for tilgangsverktøy. -->
           <img
@@ -105,7 +104,7 @@
 
         <!-- Gjentatte produktkort med samme struktur.
              Tips: Unike alt-tekster og titler for hvert produkt. -->
-        <article>
+        <article class="flex-container">
           <img
             src="https://picsum.photos/200/300?grayscale"
             alt="Red Dead Redemption"
@@ -116,7 +115,7 @@
           <a href="product.html" class="btn">Se produkt</a>
         </article>
 
-        <article>
+        <article class="flex-container">
           <img
             src="https://picsum.photos/200/300?grayscale"
             alt="Red Dead Redemption"
@@ -127,7 +126,59 @@
           <a href="product.html" class="btn">Se produkt</a>
         </article>
 
-        <article>
+        <article class="flex-container">
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+        <article class="flex-container">
+          <!-- Produktbilde.
+               alt-tekst beskriver produktet for tilgangsverktøy. -->
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <!-- <h3> er artikkelens tittel (underordnet <h2>). -->
+          <h3>Red dead Redemption</h3>
+          <!-- Kort beskrivelse. -->
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <!-- Pris. Tips: vurder <data value="499">kr 499</data> for maskinlesbar verdi. -->
+          <p>kr 499</p>
+          <!-- Handlingslenke (CTA). href="" betyr “ingen mål-URL ennå”.
+               Tips: når dette blir en knapp som legger i handlekurv via JS, vurder <button>. -->
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <!-- Gjentatte produktkort med samme struktur.
+             Tips: Unike alt-tekster og titler for hvert produkt. -->
+        <article class="flex-container">
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article class="flex-container">
+          <img
+            src="https://picsum.photos/200/300?grayscale"
+            alt="Red Dead Redemption"
+          />
+          <h3>Red dead Redemption</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article class="flex-container">
           <img
             src="https://picsum.photos/200/300?grayscale"
             alt="Red Dead Redemption"
@@ -142,25 +193,24 @@
       <!-- Seksjon for kategorier/lenkesamling til undersider. -->
       <section>
         <h2>Kategorier</h2>
-
         <!-- Hver <article> kan representere en kategoriinngang.
              <h3> inneholder en lenke til kategoriside. -->
-        <article>
+        <article class="grow-1 category-card">
           <!-- Lenke til “Action”-kategori. -->
           <h3><a href="action.html">Action</a></h3>
         </article>
 
-        <article>
+          <article class="grow-1 category-card">
           <!-- Lenke til “Nintendo”-kategori. -->
           <h3><a href="nintendo.html">Nintendo</a></h3>
         </article>
 
-        <article>
+         <article class="grow-1 category-card">
           <!-- Lenke til “Rollespill”-kategori. -->
           <h3><a href="rollespill.html">Rollespill</a></h3>
         </article>
 
-        <article>
+        <article class="grow-1 category-card">
           <!-- Lenke til “Fantasy”-kategori. -->
           <h3><a href="fantasy.html">Fantasy</a></h3>
         </article>
@@ -203,6 +253,6 @@
       </form>
     </aside>
     <footer>Webutvikling 2025</footer>
-</div>
+    </div>
   </body>
 </html>
