css flex begynt

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <header>
     <h1> Lab øvelse 1</h1>
     </header>
+    <div class="content-row">
     <section>
       <article class="card">
         <h2> Kontakt oss</h2>
@@ -65,6 +66,7 @@
       </ul>
     </section>
   </aside>
+    </div>
 
 <footer>
     <h2>Kontakt</h2>
