css grid og ny  html

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   </head>
   <body>
     <div class="layout">
-    <header class="site-header">
-      <h3 class="logo"><a href="index.html">LOGO</a></h3>
-      <nav class="main">
-        <ul>
-          <li><a href="index.html">Hjem</a></li>
-          <li><a href="nettsidemal.html">Nettside mal</a></li>
-          <li><a href="ovelse.html">Lab øvelser</a></li>
-          <li><a href="kontaktoss.html">Kontakt oss</a></li>
-        </ul>
-      </nav>
-    </header>
+      <header class="site-header">
+        <h3 class="logo"><a href="index.html">LOGO</a></h3>
+        <nav class="main">
+          <ul>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="nettsidemal.html">Nettside mal</a></li>
+            <li><a href="ovelse.html">Lab øvelser</a></li>
+            <li><a href="kontaktoss.html">Kontakt oss</a></li>
+          </ul>
+        </nav>
+      </header>
 
 <main>
-  <header>
+  <header class="main-header">
     <h1> Lab øvelse 1</h1>
     </header>
-    <div class="content-row">
-    <section>
+    <div class="cards">
+    <section class="cards">
       <article class="card">
         <h2> Kontakt oss</h2>
         <p>Her kan du kontakte oss</p>
@@ -66,7 +66,7 @@
       </ul>
     </section>
   </aside>
-    </div>
+  </div>
 
 <footer>
     <h2>Kontakt</h2>
