--- a/frontpage.html
+++ b/frontpage.html
@@ -4,52 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/labovelse.css">
     <title>CSS grid</title>
 </head>
 <body>
-    <div id="grid-container">
-        <header>
-            <span id="logo"><a href="index.html">logo</a></span>
-            <nav>
-                <ul>
-                    <li> <a href="#">home</a></li>
-                    <li> <a href="#">product</a></li>
-                    <li> <a href="#">blog</a></li>
-                    <li> <a href="#">about</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main id="mansory-grid">
-            <h2>Temaer</h2>
-            <section id="natur">
-                <h3>Naturfenomener</h3>
-            </section>
-            <section id="science">
-                <h3>Vitenskapelige oppdagelser</h3>
-            </section>
-            <section id="animal">
-                <h3>Dyr og dyreatferd</h3>
-            </section>
-            <section id="tech">
-                <h3>Teknologiens utvikling</h3>
-            </section>
-            <section id="culture">
-                <h3>Kulturelle tradisjoner</h3>
-            </section>
-            <section id="history">
-                <h3>Historiske oppfinnelser</h3>
-            </section>
-            <section id="geo">
-                <h3>Geografiske landemerker</h3>
-            </section>
-            <section id="food">
-                <h3>Mat og kulinariske tradisjoner</h3>
-            </section>
-        </main>
-        <footer>
-            <p>@anncharlott</p>
-        </footer>
-    </div>
+  <div class="grid-container">
+    <header>
+      <span class="logo"><a href="index.html">logo</a></span>
+      <nav>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">product</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">about</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h2>Temaer</h2>
+      <section class="natur"><h3>Naturfenomener</h3></section>
+      <section class="science"><h3>Vitenskapelige oppdagelser</h3></section>
+      <section class="animal"><h3>Dyr og dyreatferd</h3></section>
+      <section class="tech"><h3>Teknologiens utvikling</h3></section>
+      <section class="culture"><h3>Kulturelle tradisjoner</h3></section>
+      <section class="history"><h3>Historiske oppfinnelser</h3></section>
+      <section class="geo"><h3>Geografiske landemerker</h3></section>
+      <section class="food"><h3>Mat og kulinariske tradisjoner</h3></section>
+    </main>
+
+    <footer>
+      <p>@anncharlott</p>
+    </footer>
+  </div>
 </body>
 </html>
