--- a/ovelseside.html
+++ b/ovelseside.html
@@ -7,14 +7,14 @@
         <title> Øvelse - studieuka </title>
     </head>
 
-<body> <!-- Selve siden begynner -->
+    <body>
 
     <!-- TOPPFELT (sticky header uten ekstra luft) -->
     <header class="toppfelt"> <!-- toppfelt = fast toppmeny som følger med opp/ned -->
       <div class="navigasjon beholder"> <!-- navigasjon = wrapper for logo, burger og meny / beholder = sentrerer innhold -->
         <a class="merke" href="#" aria-label="Hjem"> <!-- merke = logo + navn, lenke til forsiden -->
           <span class="merke__logo" aria-hidden="true"></span> <!-- visuell logo (dekorativ) -->
-          <span class="merke__tekst">Ditt Brand</span> <!-- navnet som tekst -->
+          <span class="merke__tekst">Fredrikstad Yoga</span> <!-- navnet som tekst -->
         </a>
 
         <!-- Burger + checkbox-hack (kun CSS): klikker på label => sjekker checkbox => viser meny -->
@@ -24,10 +24,10 @@
         </label>
 
         <nav class="meny" aria-label="Hovedmeny"> <!-- meny = navigasjonslenker -->
-          <a href="#tjenester">Tjenester</a> <!-- lenke til seksjon -->
-          <a href="#om">Om oss</a> <!-- lenke til seksjon -->
-          <a href="#kontakt">Kontakt</a> <!-- lenke til seksjon -->
-          <a class="knapp knapp--primar" href="#bestill">Bestill time</a> <!-- tydelig primærhandling -->
+          <a href="#blogg">Blogg</a> <!-- lenke til bloggseksjonen -->
+          <a href="#tjenester">Timer</a> <!-- lenke til kortseksjon -->
+          <a href="#kontakt">Kontakt</a> <!-- lenke til sidefelt -->
+          <a class="knapp knapp--primar" href="#bestill">Prøv en time</a> <!-- tydelig primærhandling -->
         </nav>
       </div>
     </header>
@@ -35,56 +35,73 @@
     <!-- HELTOPP (hero) full bredde, uten luft over) -->
     <section class="heltopp" id="heltopp"> <!-- visuell intro med tittel og knapper -->
       <div class="beholder heltopp__innhold"> <!-- begrenser maks bredde og gir innvendig luft -->
-        <p class="merkelapp">Nyhet • Høstkampanje</p> <!-- liten «pill» merkelapp -->
-        <h1>Bygg en enkel, responsiv side raskt</h1> <!-- hovedbudskap -->
-        <p class="innledning">Mobil først, ryddig grid på desktop og tilgjengelig navigasjon — i tråd med skissene.</p> <!-- kort forklaring -->
+        <p class="merkelapp">Blogg • Mental helse</p> <!-- liten «pill» merkelapp -->
+        <h1>Yoga for et roligere sinn</h1> <!-- hovedbudskap -->
+        <p class="innledning">Hvordan pust, bevegelse og tilstedeværelse kan dempe stress, styrke nervesystemet og gi bedre søvn.</p> <!-- kort forklaring -->
         <div class="heltopp__knapper"> <!-- holder CTA-knappene samlet -->
-          <a class="knapp knapp--primar" href="#bestill">Kom i gang</a> <!-- primær knapp -->
-          <a class="knapp knapp--sekundar" href="#tjenester">Se funksjoner</a> <!-- sekundær knapp -->
+          <a class="knapp knapp--primar" href="#blogg">Les artikkelen</a> <!-- primær knapp -->
+          <a class="knapp knapp--sekundar" href="#tjenester">Se våre timer</a> <!-- sekundær knapp -->
         </div>
       </div>
     </section>
 
     <!-- KORTSEKSJON (3 kort i grid på større skjerm, stablet på mobil) -->
-    <section class="kortseksjon" id="tjenester"> <!-- presenterer tre fordeler/ting -->
+    <section class="kortseksjon" id="tjenester"> <!-- presenterer tilbud/tema -->
       <div class="beholder grid-kort"> <!-- grid-kort = selve griden med kort -->
         <article class="kort"> <!-- et enkelt kort -->
-          <h3>Rask å sette opp</h3> <!-- korttittel -->
-          <p>Minimal CSS med design‑tokens. Lett å justere farger, radius og skygge.</p> <!-- beskrivelse -->
-          <a href="#" class="kort__lenke">Les mer</a> <!-- lenke knyttet til kortet -->
+          <h3>Pust</h3> <!-- korttittel -->
+          <p>Rolige pusteøvelser (pranayama) beroliger nervesystemet og senker puls og stressnivå.</p> <!-- beskrivelse -->
+          <a href="#" class="kort__lenke">Lær enkel box-breathing</a> <!-- lenke knyttet til kortet -->
         </article>
         <article class="kort">
-          <h3>Mobil først</h3>
-          <p>Stack på mobil, grid på større skjermer. Ingen uønskede mellomrom.</p>
-          <a href="#" class="kort__lenke">Les mer</a>
+          <h3>Bevegelse</h3>
+          <p>Myke flytsekvenser løsner spenninger, øker sirkulasjon og forbedrer kroppskontakt.</p>
+          <a href="#" class="kort__lenke">Se rolig kveldssekvens</a>
         </article>
         <article class="kort">
-          <h3>Klar for produksjon</h3>
-          <p>Semantisk HTML, sticky header og fokus-stater for tastaturnavigasjon.</p>
-          <a href="#" class="kort__lenke">Les mer</a>
+          <h3>Nærvær</h3>
+          <p>Mindfulness i savasana og korte skanninger roer grubling og øver opp oppmerksomhet.</p>
+          <a href="#" class="kort__lenke">Prøv 5‑min kropps­skanning</a>
         </article>
       </div>
     </section>
 
-    <!-- INNHOLD + SIDEFELT (grid her, ikke på hele siden) -->
-    <section class="innhold" id="om"> <!-- hovedinnhold -->
+    <!-- BLOGG + SIDEFELT (grid her, ikke på hele siden) -->
+    <section class="innhold" id="blogg"> <!-- hovedinnhold: bloggartikkel -->
       <div class="beholder innhold__grid"> <!-- to kolonner på desktop: artikkel + sidefelt -->
         <article> <!-- tekstkolonne -->
-          <h2>Om løsningen</h2> <!-- seksjonstittel -->
-          <p>Strukturen speiler en typisk landingsside: heltopp, kortseksjon, hovedinnhold og en sidebar for kontakt/CTA.</p> <!-- beskrivelse -->
-          <p>Denne malen er laget for å ligne skissene dine på både mobil og desktop.</p> <!-- ekstra kontekst -->
-          <ul> <!-- punktliste med fordeler -->
-            <li>Full-bredde toppfelt og heltopp uten luft på toppen</li>
-            <li>Grid kun på innholdet, ikke på hele siden</li>
-            <li>Sticky toppfelt med lett blur og ramme</li>
+          <h2>Yoga og mental helse: små vaner som gir stor effekt</h2> <!-- seksjonstittel -->
+
+          <p><strong>Stress er en kroppslig reaksjon</strong>. Når vi er kronisk «på», blir pust overflatisk, skuldre heiser seg og søvnen lider. Yoga møter dette med tre enkle verktøy: pust, bevegelse og oppmerksomhet.</p> <!-- ingress -->
+
+          <h3>1) Pust: nervenes fjernkontroll</h3> <!-- undertittel -->
+          <p>Langsom, jevn utpust aktiverer det parasympatiske nervesystemet – kroppens brems. Start med <em>4–4–4–4</em>: pust inn i 4, hold 4, pust ut i 4, hold 4. Gjenta 4 runder. To minutter daglig er nok til å merke ro.</p> <!-- avsnitt -->
+
+          <h3>2) Bevegelse: løsne spenninger</h3>
+          <p>Rolig flyt (f.eks. kat‑ku, barnets posisjon, langsomme fremoverbøy) slipper tak i nakke/kjeve/rygg. Beveg deg i takt med pusten – <em>bevegelsen starter på utpust</em> når du vil slippe spenning.</p>
+
+          <h3>3) Nærvær: trene oppmerksomhet</h3>
+          <p>Avslutt med 3–5 min savasana. Legg merke til kontaktpunkter mot underlaget, lyder på avstand og temperaturen på pusten ved nesen. Når tankene vandrer: legg merke til det, og kom rolig tilbake.</p>
+
+          <blockquote>«Det du gir oppmerksomhet, vokser.» – Bruk yogamatta som et trygt sted å øve på dette, 10 minutter om dagen.</blockquote> <!-- kort sitat -->
+
+          <h3>Praktisk ukesplan (forslag)</h3>
+          <ul>
+            <li><strong>Mandag</strong>: 5 min pust + 10 min myk flyt</li>
+            <li><strong>Onsdag</strong>: 15 min kveldssekvens for søvn</li>
+            <li><strong>Lørdag</strong>: 20 min rolig yoga + 5 min savasana</li>
           </ul>
+
+          <p>Det viktigste er ikke lengden, men <em>regelmessigheten</em>. Små, repeterte økter gir større effekt enn sjeldne «maraton-økter».</p>
         </article>
+
         <aside class="sidefelt" id="kontakt"> <!-- høyre kolonne -->
-          <div class="sidefelt__boks"> <!-- sticky boks med kontaktinfo -->
-            <h3>Kontakt oss</h3> <!-- tittel i sidefelt -->
+          <div class="sidefelt__boks"> <!-- sticky boks med kontaktinfo/CTA -->
+            <h3>Bestill prøvetime</h3> <!-- tittel i sidefelt -->
+            <p>Vil du prøve medisinsk yoga eller rolig flyt? Ta kontakt:</p> <!-- beskrivelse -->
             <p>E‑post: <a href="mailto:hei@example.com">hei@example.com</a></p> <!-- epostlenke -->
             <p>Tlf: <a href="tel:+4712345678">+47 12 34 56 78</a></p> <!-- telefonlenke -->
-            <a class="knapp knapp--primar" id="bestill" href="#">Bestill time</a> <!-- primær handling i sidefelt -->
+            <a class="knapp knapp--primar" id="bestill" href="#">Book nå</a> <!-- primær handling i sidefelt -->
           </div>
         </aside>
       </div>
@@ -93,7 +110,7 @@
     <!-- BUNNFELT -->
     <footer class="bunnfelt"> <!-- avsnitt nederst med smålenker -->
       <div class="beholder bunnfelt__innhold"> <!-- fleksraden i footer -->
-        <p>© <span id="ar"></span> Ditt Brand</p> <!-- dynamisk årstall -->
+        <p>© <span id="ar"></span> Fredrikstad Yoga</p> <!-- dynamisk årstall -->
         <nav class="bunnfelt__meny"> <!-- sekundærmeny -->
           <a href="#personvern">Personvern</a> <!-- lenke til side -->
           <a href="#vilkar">Vilkår</a> <!-- lenke til side -->
@@ -106,3 +123,4 @@
     </script>
   </body>
 </html>
+
