--- a/ovelse6.html
+++ b/ovelse6.html
@@ -38,7 +38,15 @@
     <!-- Card 1 -->
     <section class="card">
       <figure>
-        <img src="https://picsum.photos/300/300" alt="Eksempelbilde 1">
+        <picture>
+            <source srcset="https://picsum.photos/id/13/1200/800"
+            media="(min-width:680px)">
+            <source srcset="https://picsum.photos/id/13/400/267"
+            media="(max-width:679px)">
+            <img
+            src="https://picsum.photos/id/13/200/300"
+            alt="bilde">
+        </picture>
       </figure>
       <section>
         <h2>Energisparing i Hverdagen: Hvordan Bruke Mindre Strøm</h2>
@@ -62,15 +70,26 @@
         </p>
       </section>
       <figure>
-        <img src="https://picsum.photos/300/300" alt="Eksempelbilde 2">
+        <picture>
+            <source srcset="https://picsum.photos/id/28/1200/800"
+            media="(min-width:680px)">
+            <source srcset="https://picsum.photos/id/28/400/267"
+            media="(max-width:679px)">
+        <img src="https://picsum.photos/id/28/200/300" alt="Eksempelbilde 2">
+        </picture>
       </figure>
     </section>
 
     <!-- Card 3 -->
-    <section class="card">
+    <section class="card card3">
       <figure>
+        <picture>
+            <source srcset="https://picsum.photos/id/15/1200/800"
+            media="(min-width:680px)">
+            <source srcset="https://picsum.photos/id/15/400/267"
+            media="(max-width: 679px)">
         <img src="https://picsum.photos/300/300" alt="Eksempelbilde 3">
-      </figure>
+      </picture></figure>
       <section>
         <h2>Gjenbruk og Resirkulering: Fra Avfall til Ressurser</h2>
         <p>
@@ -125,8 +144,8 @@
   <!-- FOOTER -->
   <footer>
     <a href="#" id="footer-logo">Logo footer</a>
-
-    <section class="generelt">
+<div class="footer-grid">
+    <section>
       <h3>Generelt</h3>
       <ul>
         <li>Adresse</li>
@@ -149,7 +168,7 @@
         <li>Portfolio</li>
         <li>Kontakt</li>
       </ul>
-    </section>
+    </section></div>
   </footer>
 
 </body>
