--- a/ovelse6.html
+++ b/ovelse6.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Forside: øvelse 7</title>
   <link rel="stylesheet" href="css/ovelseseks.css" />
+<script src="https://kit.fontawesome.com/1703dd8cac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -12,7 +13,12 @@
   <!-- HEADER -->
   <header>
     <nav>
-      <a id="logo" href="index.html">Logo</a>
+    <h6 class=logoheader>
+    <a href="index.html">
+     <i class="fa-solid fa-tree" style="color: #63E6BE;"></i>
+    <span class="logo-text"> Miljøaktivitstene</span>
+   </a></h6>
+</h3>
       <ul>
         <li><a href="#">Hjem</a></li>
         <li><a href="#">Tjenester</a></li>
@@ -143,7 +149,8 @@
 
   <!-- FOOTER -->
   <footer>
-    <a href="#" id="footer-logo">Logo footer</a>
+   <i class="fa-solid fa-tree" style="color: #63E6BE;"></i>
+    <a href="#" id="footer-logo">Informasjon</a>
 <div class="footer-grid">
     <section>
       <h3>Generelt</h3>
@@ -154,7 +161,9 @@
       </ul>
 
       <ul id="some">
-        <li>facebook</li>
+        <li>
+  
+<i class="fa-brands fa-facebook" style="color: #63E6BE;"></i>facebook</li>
         <li>instagram</li>
       </ul>
     </section>
